--- a/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/HauppaugeBlaster/HauppaugeBlaster.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/Plugins/TunerExtensions/HauppaugeBlaster/HauppaugeBlaster.csproj
@@ -110,6 +110,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Config\HauppaugeBlasterConfig.resx">
       <DependentUpon>HauppaugeBlasterConfig.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
