--- a/TvEngine3/Mediaportal/TV/Server/SetupTv/SetupTv.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/SetupTv/SetupTv.csproj
@@ -627,6 +627,17 @@
     <Content Include="images\tvguide_recordserie_button.png" />
     <Content Include="images\tvguide_record_button.png" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Castle.Core-log4net">
+      <Version>3.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="Castle.LoggingFacility">
+      <Version>3.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="Castle.Windsor">
+      <Version>3.2.0</Version>
+    </PackageReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
